# shibumi-store

./: .coveragerc  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  mypy.ini  pyproject.toml  ruff.toml  sonar-project.properties  tasks.py
.github/workflows/: ci.yml
app/: app.py  constants.py  exceptions.py  injector.py  settings.py  tasks.py
app/api/v1/: __init__.py  constants.py
app/api/v1/auth/: auth.py  jwt.py  password.py
app/api/v1/dependencies/: __init__.py  auth.py  cart.py  category.py  comment.py  product.py  thread.py  user.py  users.py  vote.py
app/api/v1/entities/: __init__.py  auth.py  users.py
app/api/v1/models/: __init__.py  auth.py  cart.py  category.py  comment.py  parameter.py  product.py  role.py  thread.py  user.py  users.py  vote.py
app/api/v1/repositories/: __init__.py  cart.py  category.py  category_parameters.py  comment.py  parameter.py  parameters_values.py  product.py  role.py  role_scopes.py  roles_scopes.py  thread.py  user.py  users.py  vote.py
app/api/v1/routers/: __init__.py  auth.py  cart.py  category.py  comment.py  health.py  product.py  role.py  thread.py  user.py  users.py  vote.py
app/api/v1/schemas/: __init__.py  auth.py  users.py
app/api/v1/services/: __init__.py  cart.py  category.py  comment.py  parameter.py  product.py  role.py  role_scopes.py  roles_scopes.py  thread.py  user.py  users.py  vote.py
app/api/v1/validators/: __init__.py  auth.py  cart.py  category.py  comment.py  product.py  thread.py  user.py  users.py  vote.py
app/loaders/: __init__.py
app/services/: __init__.py  base.py
app/services/mongo/: client.py  constants.py  mongo.py  service.py  transaction_manager.py
app/services/redis/: client.py  constants.py  service.py
app/services/send_grid/: client.py  constants.py  service.py
app/tests/: __init__.py  constants.py  test_app.py
app/tests/api/v1/: __init__.py  test_auth.py  test_cart.py  test_category.py  test_comment.py  test_health.py  test_product.py  test_role.py  test_thread.py  test_user.py  test_users.py  test_vote.py
app/tests/api_v1/: __init__.py  test_auth.py  test_health.py  test_users.py
app/tests/fixtures/: manager.py  users.json
app/tests/fixtures/json/: cart.json  carts.json  category_parameters.json  comments.json  parameters_values.json  products.json  threads.json  users.json  votes.json
app/utils/: json.py  jwt.py  metas.py  password.py  pydantic.py  token.py
migrations/: 20231231132337_create_users_username_index.py  20240105000210_create_roles_machine_name_index.py  20240105000210_create_roles_role_index.py  20240105000210_create_roles_scopes_role_index.py  20240105000729_insert_roles.py  20240105000729_insert_roles_scopes.py  20240109200231_create_users_text_index.py  20240203172852_create_categories_path_and_machine_name_indexes.py  20240203172852_create_categories_path_and_path_name_indexes.py  20240203173352_insert_categories.py  20240208144150_create_parameters_machine_name_index.py  20240208144203_insert_parameters.py  20240208172017_update_categories_set_paratemers_field.py  20240213214801_create_products_category_id_index.py  20240219180654_create_products_text_index.py  20240509181023_create_cart_user_id_index.py  20240509181023_create_carts_user_id_index.py  20240713164500_create_votes_comment_id_user_id_index.py
requirements/: common.txt  dev.txt
